# TempusRecords

./: .gitignore  .prettierignore  .prettierrc  Cargo.toml  LICENSE  README.md  TempusRecords.sln  package-lock.json  package.json
TempusRecords/: TempusRecords.js  TempusRecords.njsproj  blacklist.json  color_curves.acv  config.json  demo.js  downloader.js  last_uploaded.json  nicknames.json  obs.js  package-lock.json  package.json  rcon.js  uploaded.json  utils.js  youtube.js
patches/: tempus-api-graphql+0.4.2.patch  tempus-api-graphql+0.5.2.patch
scripts/: README.md  resolution.py  tempus_records.py
scripts/configs/default/cfg/: autoexec.cfg  binds.cfg  chat.cfg  cinema.cfg  config.cfg  gfx.cfg  gfx_cinema.cfg  motd_entries.txt  offline.cfg  tas.cfg  (+4 more)
src/: README.md  blacklist.json  demo.js  downloader.js  index.js  main.rs  package-lock.json  package.json  rcon.js  split.js  tempus.js  utils.js  video.js  youtube.js
src/api/: api_runner.rs  endpoints.rs  mod.rs
src/api/cache/: api_cache.rs  mod.rs  polodb_cache.rs
src/api/containers/: checkpoint.rs  class.rs  demo.rs  map.rs  mod.rs  player.rs  run.rs  server.rs  tiers.rs  zone.rs
src/api/remote/: https_api.rs  mod.rs  remote_api.rs
src/data/: bans.json  blacklist.json  boofooka.json  chat_enable.json  color_curves.acv  color_curves_fullbright.acv  config.json  fullbright_maps.json  nicknames.json  oauth.json  quality.json  server_blacklist.json  trick.json  uploaded.json  voice_enable.json
svr/: svr_launch_params.ini
svr/data/: launcher-config.json
svr/data/profiles/: tempus.ini  tempus.json
(+346 files in other folders)
