[package]
name = "TempusRecords"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.14.0"
const_format = "0.2.32"
polodb_core = "4.4.0"
redb = "1.3.0"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
log = "0.4.20"
